<resources>
    <string name="app_name">My Tennis Note</string>
    <string name="action_settings">Settings</string>
    <string name="tab_note">My Note</string>
    <string name="tab_statistics">Statistics</string>
    <string name="menu_memo">New Note</string>
    <string name="memo_type">Type</string>
    <string name="practice">Practice</string>
    <string name="match">Match</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="courte_surface">Courte Surface</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="action_add_note">Add</string>
    <string name="radio_1set">1 set</string>
    <string name="radio_3set">3 set</string>
    <string name="radio_5set">5 set</string>
    <string name="score_bar">-</string>
    <string name="label_opponent">Opponent</string>
    <string name="label_you">You</string>
</resources>
